# grading-cat

./: .hgignore  catStyle.qss  cli.py  config.py  config_template.json  diagrams.py  downloader.py  jplag_preprocessor.py  jplag_runner.py  lines.py  main.py  main_utils.py  main_window.py  match_viewer.py  moodle_downloader.py  number_of_nodes.py  project.py  project_config_editor.py  project_config_template.json  pyproject.toml  readme.md  result.txt  ui_main_cat.py  vplag.ui
gui/: about_cat.py  config_editor.py  config_editor_widgets.py  diagrams.py  lines.py  main_window.py  match_viewer.py  new_diagram_dialog.py  number_of_nodes.py  project_config_editor.py
interop/: jplag_preprocessor.py  jplag_runner.py  moodle_downloader.py
