[tool.poetry]
name = "gradingcatui"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7, <3.10"
PySide6 = "^6.0.2"
pyunpack = "^0.2.2"
patool = "^1.12"
requests = "^2.25.0"
dotmap = "^1.3.23"

[tool.poetry.dev-dependencies]
black = {version = "^21.6b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
