[tool.poetry]
name = "gradingcatui"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7, <3.10"
pyunpack = "^0.2.2"
patool = "^1.12"
requests = "^2.25.0"
dotmap = "^1.3.23"
PySide6 = "^6.3.0"

[tool.poetry.dev-dependencies]
rope = "^0.19.0"
icecream = "^2.1.2" # for printing out values during debugging
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
